

1.2.1 (unreleased)
------------------

- Fix margin bottom of open in overlay indicator (ftw.simplelayout).
  [mathias.leimgruber]

- Add spinner support for ajax request (ftw.simplelayout).
  [mathias.leimgruber]

- Style referencebrowser overlay.
  [mathias.leimgruber]

- Reduce general spacing right/left for overlays. This means more space for the overlay content.
  [mathias.leimgruber]


1.2.0 (2016-10-11)
------------------

- Point to plone root always on mobile logo.
  [mathias.leimgruber]

- Fix styles for h-tags inside of header tags in portlet row.
  [mathias.leimgruber]

- Add translation for pathbar for en, it, fr and de
  [Kevin Bieri]

- Hide navigation column in tablet view on customer request
  [Kevin Bieri]

- Use same styling for heading 3 as for strong
  [Kevin Bieri]

- Show subsite title in pathbar instead of Home on subsites.
  [mathias.leimgruber]

- Add text to zoom buttons, since wcag 2.0 doesn't allow empty links.
  [mathias.leimgruber]

- Remove horizontal scrollbar in IE.
  [Kevin Bieri]

- Improve simplelayout styles (Dragging new layout + Simplelayout Porlet).
  [mathias.leimgruber]

- Implement moble logo viewlet.
  [mathias.leimgruber]

- Support a mobile logo.
  [mathias.leimgruber]

- Support the new html structure of the "current folder" item in the autocompletewidget.
  [mathias.leimgruber]

- Replace globalnav-selected with menu-selected id in rules.xml.
  [mathias.leimgruber]

- Add support for googles sitelinks searchbox.
  [mathias.leimgruber]


1.1.3 (2016-04-27)
------------------

- Adjust simplelayout layout fix in 1.1.2 to fix layout if you drag
  a block into a column.
  [elioschmutz]


1.1.2 (2016-04-27)
------------------

- Fix broken simplelayout layouts.
  [elioschmutz]


1.1.1 (2016-04-22)
------------------

- Fix side effect with hiding search button (livesearch/detailsearch).
  Accidentally the searchButton of the contenttree widget was hidden by the last bern.web 2.0 release.
  [mathias.leimgruber]

