@@ -17,19 +17,10 @@
   <body>
     <ul id="accesskeys" class="hiddenStructure" />
     <div id="portal-top">
-    <div id="mobile-logo" />
+      <div id="mobile-logo" />
 
-      <ul class="mobileButtons">
-        <li>
-          <a href="#" id="toggle_search" title=""></a>
-        </li>
-        <li>
-          <a href="#" id="toggle_slidenavi" title=""></a>
-        </li>
-        <li>
-          <a href="#" id="toggle_subsitelangs" title="">de</a>
-        </li>
-      </ul>
+      <div id="ftw-mobile-wrapper" />
+
       <div id="portal-personaltools-wrapper">
         <dl class="actionMenu deactivated" id="portal-personaltools"><dt id="anon-personalbar">
           <a href="#" id="personaltools-a">Kontakt</a>
