@@ -17,6 +17,9 @@ Changelog
 - Reduce general spacing right/left for overlays. This means more space for the overlay content.
   [mathias.leimgruber]
 
+- Replace ftw.mobilenavigation with ftw.mobile.
+  [mathias.leimgruber]
+
 
 1.2.0 (2016-10-11)
 ------------------
